# v-hunter

./: .env.example  .gitignore  .semgrepignore  LICENSE  README.md  pyproject.toml
advisories/: CVE-2026-48881.md  CVE-2026-54830.md  CVE-2026-54835.md  TEMPLATE.md
benchmarks/: recall.json  recall_benchmark.py
hunter/: call_resolver.py  cc_triager.py  cli.py  context.py  db.py  ingestor.py  poc_generator.py  pre_filter.py  reporter.py  review.py  runs.py  static_filter.py  triager.py  verifier.py
hunter/prompts/: cap-check.md  csrf.md  (+16 more)
rules/: arbitrary-file-upload.yml  idor-object-mutation.yml  js-prototype-pollution.yml  meta-key-injection.yml  missing-cap-check.yml  missing-nonce-check.yml  nopriv-missing-nonce.yml  path-traversal.yml  php-object-injection.yml  reflected-xss.yml  rest-unauth-endpoint.yml  sql-injection.yml  ssrf.yml  ssti-template-engine.yml  stored-xss.yml  wp-privesc-user-role.yml
sandbox/: docker-compose.yml  multisite.htaccess  setup_pmcf7.php  setup_timetics.php  wpsf-magic-quotes-check.php  wpsf-setup.php
scripts/: auto_hunt_v2.sh  auto_hunt_v3.py  batch_pipeline.py  batch_pipeline_v2.py  clean_plugin_slugs.json  discover_clean_plugins.py  discover_rce_targets.py  discover_targets.py  preview_context.py  sweep_old_plugins.py  verify_prompt_caching.py
tests/: test_context.py  test_db.py  test_ingestor.py  test_path_defaults.py  test_poc_generator.py  test_session_helpers.py  test_static_filter.py  test_triager.py  test_verifier_phase2.py
validation/: check_versions.py  fetch.py  run_validation.py  test_out.json  test_propagation.php
(+8 files in other folders)
