[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wp-hunter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "anthropic>=0.25",
    "docker>=7.0",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.scripts]
hunter = "hunter.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["hunter*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "responses",
]
